News UAT/force-app/main/default/objects/Campaign_Influence__c/Campaign_Influence__c.object-meta.xml
<CustomObject>
    <description>Junction Object between opportunities and campaigns.</description>
    <label>Campaign Influence</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Campaign Influences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>