News UAT/force-app/main/default/objects/Campaign_Influence__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Influences</relationshipLabel>
    <relationshipName>Campaign_Influences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>