News UAT/force-app/main/default/objects/Campaign_Influence__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <description>How much influence a campaign has over the related Opportunity.</description>
    <label>Influence (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>