News UAT/force-app/main/default/objects/Campaign_Influence__c/fields/Is_Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean value to check if the related campaign is the primary influence of the Opportunity. Used in Trigger.</description>
    <inlineHelpText>Is this Campaign the primary influence over the Opportunity?</inlineHelpText>
    <label>Primary Campaign</label>
    <type>Checkbox</type>
</CustomField>